Screen cleaner has become better than ever

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,62 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <EditText
+        android:id="@+id/txtTaskName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/task_name"
+        android:inputType="textCapSentences"
+        android:textSize="30sp"/>
 
-        <EditText
-            android:id="@+id/txtTaskName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/task_name"
-            android:inputType="textCapSentences"
-            android:textSize="30sp" />
+    <Button
+        android:id="@+id/btnStartDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/start_date"
+        android:textSize="18sp" />
 
-        <Button
-            android:id="@+id/btnStartDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/start_date"
-            android:textSize="18sp" />
+    <CalendarView
+        android:id="@+id/cVstartDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:visibility="visible" />
 
-        <CalendarView
-            android:id="@+id/cVstartDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:visibility="visible" />
+    <Button
+        android:id="@+id/btnEndDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/end_date"
+        android:textSize="18sp" />
 
-        <Button
-            android:id="@+id/btnEndDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/end_date"
-            android:textSize="18sp" />
+    <CalendarView
+        android:id="@+id/cVendDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-        <CalendarView
-            android:id="@+id/cVendDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/btnAdd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#8BC34A"
-            android:text="@string/add_button"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#8BC34A"
+        android:text="@string/add_button"
+        android:textSize="18sp" />
+</LinearLayout>
